--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.883.0",
+    "@aws-sdk/lib-dynamodb": "^3.883.0",
     "express": "^5.1.0",
     "winston": "^3.17.0"
   },
